--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -1,7 +1,7 @@
 <% include partials/head %>
 
-<div class="container-fluid"> 
-    <div class="login-form contact-form col-6">
+<div class="container"> 
+    <div class="form-container contact-form">
         <form id="contact" method="POST" action="/api/contact/" >
             <h1 class="form-title">Nous contacter</h1>
             <div class="bottom-text">
