--- a/views/Lostpw.ejs
+++ b/views/Lostpw.ejs
@@ -1,7 +1,7 @@
 <% include partials/head %>
 
-<div class="container-fluid"> 
-  <div class="login-form">
+<div class="container"> 
+  <div class="form-container lostpw-form">
     <form id="lostpw" method="POST" action="/api/user/lostpw">
       <h1 class="form-title">Lost Password</h1>
       <div class="txtb">
