--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -1,7 +1,7 @@
 <% include partials/head %>
 
-<div class="container-fluid"> 
-  <div class="login-form">
+<div class="container"> 
+  <div class="form-container register-form">
     <form id="register" method="POST" action="/api/auth/register">
         <h1 class="form-title">Inscription</h1>
 
