--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,5 @@
-<footer class="page-footer font-small blue pt-3 mt-3">
-        <div class="container-fluid text-center text-md-left">
-          <div class="row">
-            <hr class="clearfix w-100 d-md-none pb-3">
-            <div class="footer-links col-md-12 mb-md-0 mb-3">
+<footer class="page-footer font-small">
+            <div class="footer-links col-md-12 mb-md-0">
               <ul class="footer-list">
                 <li>
                   <a href="#!"><img class="footer-logo"  src="/svg/instagram.svg" alt="instagram-logo"/></a>
@@ -16,9 +13,7 @@
 
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="footer-copyright text-center py-1">© 2019 Copyright Maral - 
+        <div class="footer-copyright text-center">© 2019 Copyright Maral - 
           Développé par <a href="https://github.com/ablin42"> @ablin42</a>
         </div>
       </footer>
