--- a/views/Resetpw.ejs
+++ b/views/Resetpw.ejs
@@ -1,26 +1,26 @@
 <% include partials/head %>
 
 <div class="container-fluid"> 
-  <div class="login-form">
-    <form id="resetpw" method="POST" action="/api/user/resetpw">
-      <h1 class="form-title">Reset password</h1>
-      <div class="txtb">
-        <input type="password" id="password" name="password" onkeyup="Validate.Password(this);" required>
-        <span data-placeholder="Password"></span>
-        <span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to be atleast alphanumeric</span>
-      </div>
+    <div class="form-container resetpw-form">
+      <form id="resetpw" method="POST" action="/api/user/resetpw">
+        <h1 class="form-title">Reset password</h1>
+        <div class="txtb">
+          <input type="password" id="password" name="password" onkeyup="Validate.Password(this);" required>
+          <span data-placeholder="Password"></span>
+          <span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to be atleast alphanumeric</span>
+        </div>
 
-      <div class="txtb">
-        <input type="password" id="password2" name="password2" onkeyup="Validate.Password2(this);" required>
-        <span data-placeholder="Password Confirmation"></span>
-        <span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
-      </div>
+        <div class="txtb">
+          <input type="password" id="password2" name="password2" onkeyup="Validate.Password2(this);" required>
+          <span data-placeholder="Password Confirmation"></span>
+          <span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
+        </div>
 
-      <input type="hidden" name="tokenId" value="<%= locals.tokenId %>" required>
-      <input type="hidden" name="token" value="<%= locals.token %>" required>
+        <input type="hidden" name="tokenId" value="<%= locals.tokenId %>" required>
+        <input type="hidden" name="token" value="<%= locals.token %>" required>
 
-      <input type="submit" class="logbtn" value="Update Password" id="submit-resetpw">
-    </form>
+        <input type="submit" class="logbtn" value="Update Password" id="submit-resetpw">
+      </form>
   </div>
 
   <script src="/scripts/formFocus.js"></script> <!-- formvalidation passwords have to match and respect criterias -->
