--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -2,30 +2,32 @@
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
-<div class="container-fluid"> 
-    <form id="gallery" method="POST" action="/api/gallery/post" class="login-form blog-form col-6 offset-3" enctype="multipart/form-data" onsubmit="postGallery(event);">
-        <h1 class="form-title">Ajouter un item à la gallerie</h1>
-            
-        <div class="txtb">
-            <input type="text" name="title" id="title" onkeyup="Validate.String(this, 1, 256);" required>
-            <span data-placeholder="Title"></span>
-            <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
-        </div>
+<div class="container"> 
+    <div class="form-container gallery-form">
+        <form id="gallery" method="POST" action="/api/gallery/post" enctype="multipart/form-data" onsubmit="postGallery(event);">
+            <h1 class="form-title">Ajouter un item à la gallerie</h1>
+                
+            <div class="txtb">
+                <input type="text" name="title" id="title" onkeyup="Validate.String(this, 1, 256);" required>
+                <span data-placeholder="Title"></span>
+                <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
+            </div>
 
-        <textarea class="blog-textarea" id="content" name="content" placeholder="Item description.." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
-        <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
-       
-        <div class="form-group">
-            <input type="file" name="img" id="img" required>
-        </div>
+            <textarea class="blog-textarea" id="content" name="content" placeholder="Item description.." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
+            <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
+        
+            <div class="form-group">
+                <input type="file" name="img" id="img" required>
+            </div>
 
-        <div class="form-group">
-                <input v-bind="selectedTags" type="text" value="" data-role="tagsinput" id="tagInput" class="form-control">
-                <span data-placeholder="Tags"></span>
-        </div>
+            <div class="form-group">
+                    <input v-bind="selectedTags" type="text" value="" data-role="tagsinput" id="tagInput" class="form-control">
+                    <span data-placeholder="Tags"></span>
+            </div>
 
-        <input type="submit" class="logbtn" value="Save" id="submit-gallery">
-    </form>
+            <input type="submit" class="logbtn" value="Save" id="submit-gallery">
+        </form>
+    </div>
     
     <script>
         async function postGallery(e) {
