--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<div class="container-fluid "> 
+<div class="container"> 
         <h1 class="err404">ERROR: 404</h1>
 </div>
   
