--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -1,34 +1,32 @@
 <% include partials/head %>
 
 <script src="/scripts/infiniteBlogs.js"></script>
-<div class="container-fluid"> 
-    <% if (locals.level && locals.level > 1) { %>
-      <div class="alert alert-info" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-        <a href="/Blog/Post">post blog</a>
+  <% if (locals.level && locals.level > 1) { %>
+    <div class="alert alert-info" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+      <a href="/Blog/Post">post blog</a>
+    </div>
+  <% } %>
+<div class="container container-blog" id="container-blog">
+  <% if(locals.blogs){ %>
+    <% Object.keys(locals.blogs).forEach(function (index) { %>
+      <div class="row blog-row" id="<%= locals.blogs[index]._id %>">
+        <div class="col-8 offset-2">
+          <h3 class="blog-title"><a href="Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].title %></a></h3> 
+          <p class="blog-info">posté par 
+            <b class="blog-author"><%= locals.blogs[index].author %></b>, <i class="blog-date"><%= locals.blogs[index].date %></i>
+          </p>
+          <p class="blog-content"><%= locals.blogs[index].content %></p>
+        </div>
       </div>
-    <% } %>
-  <div class="container container-blog" id="container-blog">
-    <% if(locals.blogs){ %>
-      <% Object.keys(locals.blogs).forEach(function (index) { %>
-          <div class="row blog-row" id="<%= locals.blogs[index]._id %>">
-            <div class="col-8 offset-2">
-              <h3 class="blog-title"><a href="Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].title %></a></h3> 
-              <p class="blog-info">posté par 
-                <b class="blog-author"><%= locals.blogs[index].author %></b>, <i class="blog-date"><%= locals.blogs[index].date %></i>
-              </p>
-              <p class="blog-content"><%= locals.blogs[index].content %></p>
-            </div>
-          </div>
-          <hr />
-      <% }) %>
-    <% } %>
-  </div>
-  <div class="col-6 offset-3 mb-3">
-      <input type="submit" class="logbtn" value="Load more" onclick="infiniteScroll();">
-  </div>
+      <hr />
+    <% }) %>
+  <% } %>
+</div>
+<div class="col-6 offset-3 mb-3 mt-3">
+  <input type="submit" class="logbtn" value="Load more" onclick="infiniteBlogs();">
 </div>
   
 <% include partials/footer %>
