--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -18,10 +18,12 @@
                 <div class="card-body">
                   <h5 class="card-title"><i><a href="Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].title %></a></i></h5>
                   <p class="card-text gallery-description"><%= locals.galleries[index].content %></p>
+                  <p class="card-text"><b><%= locals.galleries[index].price %>€</b></p>
                   <p class="card-text">
                     <% locals.galleries[index].tags.forEach(function (tag) { %>
                       <a href="#<%= tag %>">#<%= tag %></a>
-                    <% }) %></p>
+                    <% }) %>
+                  </p>
                 </div>
               </div>
             <% }) %>
