--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -19,6 +19,8 @@
                   <h5 class="card-title"><i><a href="Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].title %></a></i></h5>
                   <p class="card-text gallery-description"><%= locals.galleries[index].content %></p>
                   <p class="card-text"><b><%= locals.galleries[index].price %>€</b></p>
+                  <input type="submit" class="logbtn" value="Add to cart" onclick="addToCart('<%= locals.galleries[index]._id %>')">
+                  <a href="/add-to-cart/<%= locals.galleries[index]._id %>">ADD</a>
                   <p class="card-text">
                     <% locals.galleries[index].tags.forEach(function (tag) { %>
                       <a href="#<%= tag %>">#<%= tag %></a>
@@ -39,6 +41,13 @@
     let expand = $("#expandImg");
     expand.src = image.src;
     expand.attr("src", image.src)
+  }
+  async function addToCart(itemId) {
+    await fetch(`http://127.0.0.1:8089/add-to-cart/${itemId}`)
+    .then(function(response) {
+      console.log(response)
+    })
+    return ;
   }
 </script>
 <% include partials/footer %>
