--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -51,7 +51,7 @@
                         <li><a href="/User" class="navbar-text"><%= locals.name %></a></li>
                         <li><a href="/api/auth/logout" class="navbar-text">Déconnexion</a></li>
                     <% } %>
-                        <li><a href="#" class="navbar-text"><i class="fas fa-shopping-cart fa-2x"></i></a></li>
+                        <li><a href="/shopping-cart" class="navbar-text"><i class="fas fa-shopping-cart fa-2x"></i></a><span class="badge"><%= (locals.session.cart && locals.session.cart.totalQty) ? locals.session.cart.totalQty : 0 %></span></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
